2010-10-07  Stipe Tolj  <stolj at kannel.org>
    * */*: updating the LICENSE preamble to reflect the correct year.
    
2010-10-07  Stipe Tolj  <stolj at kannel.org>
    * utils/makedist: addopt for our SVN repository.
    
2010-09-27 Alexander Malysh <amalysh at kannel.org>
    *  gw/bb_smscconn.c, gw/msg.h, gw/smscconn.c: applied patch that fixes sms-resend-* handling
       for concatenated messages.

2010-09-24 Alexander Malysh <amalysh at kannel.org>
    * gwlib/list.[ch]: added function to search for the equal item on the list, this is usefull
      to lookup for one element if it's still present.

2010-09-24 Alexander Malysh <amalysh at kannel.org>
    * gwlib/list.[ch]: added new function gwlist_consumer_count to receive count consumers
      for this list. Fixed comment for gwlist_sort function.

2010-09-24 Alexander Malysh <amalysh at kannel.org>
    * gwlib/list.c, test/test_list.c: fixed gwlist_sort if list get fragmented by usage.

2010-09-21 Alexander Malysh <amalysh at kannel.org>
    * wap/wtls-secmgr.c, wap/wtls.c, wap/wtls_pdu.c, wap/wtls_pdusupport.c, wap/wtls_statesupport.c:
      Fixed WTLS branch warnings.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-09-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: handle “Invalid system_type" as fatal and don't retry login.
      Thanks to Roy Walker <rwalker at sensorlogic.com> for this patch.

2010-09-13 Alexander Malysh <amalysh at kannel.org>
    * gwlib/pki.c, wmlscript/wsgram.[chy]: fixed some warnings.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-09-12 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed issue that new servers were added every time gwthread_poll returns as well as on startup.
      This fixes #525.

2010-09-12 Alexander Malysh <amalysh at kannel.org>
    * merged wtls_provision branch.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.
